# AitoClipAI

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: README.md  facebook-upload.example.json  youtube-upload.example.json
data/: README.md
docs/: README.md  aggregation-framework.md  analysis-pipeline.md  audio-observer.md  candidate-generation.md  candidate-scoring.md  candidate-selection.md  captioning.md  clip-rendering.md  core-contracts.md  downloader.md  explainable-feedback.md  incremental-audio-observer.md  incremental-pipeline.md  incremental-whisper-observer.md  observer-engine.md  pipeline-validation-0.1.md  production-incremental-orchestration.md  whisper-observer.md
models/: README.md
scripts/: README.md  validate_prerecorded_pipeline.py
src/: README.md  facebook_auth_contracts.py  operator_cleanup.py  operator_facebook_auth.py  operator_pipeline.py  operator_ui.py  operator_upload.py
tests/: README.md  incremental_generator_support.py  test_aggregation.py  test_audio_observer.py  test_candidate_generation.py  test_candidate_generation_checkpoints.py  test_candidate_scoring.py  test_candidate_selection.py  test_caption_generation.py  test_caption_rendering.py  test_clip_rendering.py  test_core_contracts.py  test_downloader.py  test_editorial_strength.py  test_endurance_checkpoint_replay.py  test_explainable_feedback.py  test_explainable_feedback_integration.py  test_facebook_credentials.py  test_facebook_uploading.py  test_ffmpeg_audio_extraction.py  test_incremental_pipeline.py  test_incremental_state_caching.py  test_observer_engine.py  (+10 more)
(+105 files in other folders)
