[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitoclipai"
version = "0.0.0"
description = "Deterministic prerecorded-video analysis and clip generation pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "AitoClipAI contributors" }
]
dependencies = [
  "yt-dlp>=2024.12.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
facebook = [
  "requests>=2.32",
]
transcription = [
  "openai-whisper",
]
youtube = [
  "google-api-python-client>=2.0",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
